# HA-Voxtral

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
documentation/: Speech-Generation.mdx  Voices.mdx  Voxtral-TTS.mdx
src/wyoming_voxtral/: __init__.py  __main__.py  catalog.py  client.py  const.py  handler.py  models.py  utilities.py
tests/: test_client.py  test_handler.py  test_main.py  test_utilities.py
